vision source manager test is still broken